option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "YarnServerNodemanagerServiceProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "yarn_protos.proto";

enum ResourceStatusTypeProto {
  FETCH_PENDING = 1;
  FETCH_SUCCESS = 2;
  FETCH_FAILURE = 3;
}

message LocalResourceStatusProto {
  optional LocalResourceProto resource = 1;
  optional ResourceStatusTypeProto status = 2;
  optional URLProto localPath = 3;
  optional int64 localSize = 4;
  optional YarnRemoteExceptionProto exception = 5;
}

message LocalizerStatusProto {
  optional string localizer_id = 1;
  repeated LocalResourceStatusProto resources = 2;
}

enum LocalizerActionProto {
  LIVE = 1;
  DIE = 2;
}

message LocalizerHeartbeatResponseProto {
  optional LocalizerActionProto action = 1;
  repeated LocalResourceProto resources = 2;
}
